--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
   <style>
-    #map
+    #map, #map2
     {
       width: 100%;
       height: 250px;
@@ -19,6 +19,44 @@
 <h1>@tilecloud/mbgl-gesture-handling</h1>
 
 <div id="map"></div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div id="map2"></div>
 
 <script src="./app.js"></script>
 </body>
