--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,11 @@
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
   <style>
+    body
+    {
+      width: 90%;
+      margin: 8px auto;
+    }
     #map, #map2
     {
       width: 100%;
