--- a/example/index.html
+++ b/example/index.html
@@ -67,7 +67,7 @@
 
 <pre>
 import 'babel-polyfill'
-import GestureHandling from '..'
+import GestureHandling from '@tilecloud/mbgl-gesture-handling'
 
 const map = new mapboxgl.Map({
   container: 'map',
@@ -89,6 +89,7 @@ new GestureHandling().addTo(map);
 We recommend to use <a href="https://parceljs.org/">Parcel</a>.
 <pre>
 $ npm install parcel
+$ npm install @tilecloud/mbgl-gesture-handling
 $ $(npm bin)/parcel build index.html
 </pre>
 
