--- a/example/index.html
+++ b/example/index.html
@@ -88,7 +88,7 @@ new GestureHandling().addTo(map);
 
 We recommend to use <a href="https://parceljs.org/">Parcel</a>.
 <pre>
-$ npm install parcel
+$ npm install parcel-bundler
 $ npm install @tilecloud/mbgl-gesture-handling
 $ $(npm bin)/parcel build index.html
 </pre>
