--- a/example/index.html
+++ b/example/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <title>Example: @geolonia/mbgl-gesture-handling</title>
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
-  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
   <style>
     body
     {
@@ -22,6 +20,7 @@
       background-color: #f5f5f5;
       border: 1px solid #dedede;
       padding: 16px;
+      overflow-x: scroll;
     }
     footer
     {
@@ -37,7 +36,7 @@
 
 <p><a href="https://github.com/geolonia/mbgl-gesture-handling">https://github.com/geolonia/mbgl-gesture-handling</a></p>
 
-<div id="map"></div>
+<div id="map" data-gesture-handling="off"></div>
 
 
 <h2>Example</h2>
@@ -50,8 +49,6 @@
   &lt;meta charset=&quot;UTF-8&quot;&gt;
   &lt;meta name=&#039;viewport&#039; content=&#039;initial-scale=1,maximum-scale=1,user-scalable=no&#039; /&gt;
   &lt;title&gt;Example: @geolonia/mbgl-gesture-handling&lt;/title&gt;
-  &lt;link href=&#039;https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css&#039; rel=&#039;stylesheet&#039; /&gt;
-  &lt;script src=&#039;https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js&#039;&gt;&lt;/script&gt;
 &lt;/head&gt;
 &lt;body&gt;
 
@@ -59,6 +56,7 @@
 
 &lt;div id=&quot;map&quot; style=&quot;width: 100%; height: 250px;&quot;&gt;&lt;/div&gt;
 
+&lt;script src=&quot;https://cdn.geolonia.com/v1/embed?geolonia-api-key=YOUR-API-KEY&quot;&gt;&lt;/script&gt;
 &lt;script src=&quot;./app.js&quot;&gt;&lt;/script&gt;
 &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -70,7 +68,7 @@ import 'babel-polyfill'
 import GestureHandling from '@geolonia/mbgl-gesture-handling'
 
 const map = new mapboxgl.Map({
-  container: 'map',
+  container: '#map',
   style: 'https://geolonia.github.io/tiny-tileserver/style.json',
   attributionControl: true,
   hash: true,
@@ -96,6 +94,11 @@ $ $(npm bin)/parcel build index.html
 <footer>
   &copy; <a href="https://geolonia.com/">geolonia.com</a>
 </footer>
+
+<script src="https://cdn.geolonia.com/dev/embed?geolonia-api-key=YOUR-API-KEY"></script>
+
+<!-- Debugging -->
+<script src='https://cdn.jsdelivr.net/gh/colxi/getEventListeners/src/getEventListeners.min.js'></script>
 
 <script src="./app.js"></script>
 </body>
